--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "seed": "node seeds/seeds.js"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.2",
     "connect-session-sequelize": "^7.1.5",
@@ -19,6 +20,7 @@
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "normalize.css": "^8.0.1",
+    "pixi.js": "^7.0.4",
     "sequelize": "^6.25.3"
   }
 }
